# EPSol

./: CMakeLists-Cygwin.txt  CMakeLists-NB.txt  CMakeLists.txt  CMakeLists.txt.bak  CMakeLists.txt~  EPSol.cpp  EPSol.h  EPSol_lib.cpp  Ideas Plan de Trabajo.txt  README.txt  cloc.txt  commands.txt  ~$forme diciembre.docx
Analysis/: Analysis.cpp  Analysis.h
Boundary/: Boundary.h  CMakeLists.txt
Examples/: Examples1-2.cpp
Examples/Ex 11/: Ex11.cpp
Examples/Ex1/: CMakeLists.txt  Ex1.cpp  Ex1_laspack.cpp  Solution.txt
Examples/Ex10/: CMakeLists.txt  Elementos.txt  Ex10 - TEMPERATURES.cpp  Ex10.cpp  Mesh.in  Mesh.nas  Nodos.txt
Examples/Ex12/: ARRANGEMENT OPTIONS.py  BsigF.txt  CMakeLists.txt  Ex12.cpp  Info_2x2_el.txt  Info_disturbed_flow_2elem_elastic_diagram.txt  LINKS.txt  assembly_test.py  dEdU.py  deriv.py  discretizaciones y matrices.pptx  doc.docx  doc.pptx  ex1.py  ex12.py  ex12_1.py  ex12_1_generic.py  ex12_1_generic_uvFFvp.py  ex12_1_generic_uvFFvp.py.bak  ex12_1_generic_uvFFvp_NO_BORRAR.py.bck  ex12_1_generic_uvFFvp_functions.py  ex12_1_radialflow.py  ex12_1_radialflow_elast.py  ex12_2.py  ex12_2_distflow.py  kglob_NOSUPG.txt  kglob_SUPG.txt  output.vtu  output_10x10_50_it.vtu  output_10x10_radial_flow_50it_ERROR.vtu  output_4x4_NOSUPG.vtu  output_4x4_SUPG.vtu  output_dist_fl_200el_3it.vtu  salida.txt  sym_deriv.py  sym_deriv_out.txt  tab to spaces.txt  vtu_info.cpp
Examples/Ex12/tests/: 1el_test.py  Conditions.txt  Vderivs.py  log_1el_radflow.txt  log_1el_radflow_solver_1_it.txt  log_1it_ERROR.txt  log_1it_ERROR_python_3.8.1.txt  output.vtu  output_1el_50it_ERROR.vtu  output_1it_ERROR.vtu  radial_flow_1el.pptx
Examples/Ex12/vtu_examples/: VertexField-U.vtu  VertexField-Ux.vtu  VertexField-Uz.vtu  VertexField-p.vtu  VertexField-pU.vtu
Examples/Ex13/: ex12_1.py  ex13.py
Examples/Ex2/: CMakeLists.txt  Ex2.cpp  Ex2_2el_output.cpp  Ex2_2elements.cpp  Results.txt  dealii.example.solution.step-1.vtk  ex2.py
Examples/Ex3/: CMakeLists.txt  Ex3.cpp
Examples/Ex4/: CMakeLists.txt  Ex4.cpp  SingleInputFile.cpp  SingleInputFile.h
Examples/Ex5/: CMakeLists.txt  Ex5.cpp  input.in
Examples/Ex6/: CMakeLists.txt  DoFReordering.h  Ex6.cpp  temp METIS.cpp
Examples/Ex7/: CMakeLists.txt  Ex7.cpp
Examples/Ex8/: 1Elem-TH.in  4Elem-TH.in  CMakeLists.txt  Ex8.cpp
Examples/Ex9/: CMakeLists.txt  Ex9.cpp
Field/: FieldOperations.h  Field_Def.h  GeometricField.h
FiniteElement/DoFHandler/: DoFHandler.h
FiniteElement/EqSys/: FE_EqSys.h
FiniteElement/FEEqnSystem/: FeEqnSystem.h
FiniteElement/FEField/: FEField.h
FiniteElement/FEMatrix/: FEMatrix.h
FiniteElement/FEValues/: FEValues.h  FEValues.h.save-failed
FiniteElement/Integration/: FEIntegrationScheme.h  Integration.h
FiniteElement/Material/: MaterialMatrix.h
FiniteElement/Mesh/: CMakeLists.txt  CSRGrid.h  Element.cpp  Element.h  Element.inst  FEGrid.cpp  FEGrid.h  FEGrid.inst
FiniteElement/ShapeFunction/: ShapeFunction.h
Function/: Function.h
Informes/: Informe nov2020.docx
Input/: CMakeLists.txt  Input.cpp  InputFile.cpp  InputFile.h  Nastran.h  Read_Field_Def.h  SingleInputFile.cpp  SingleInputFile.h  SingleInputFile.inst
Integration/: GaussPoint.h  IntegrationScheme.h
Material/: Material.h
Matrix/: CoeffMatrix.h  GaussMatrices.h  Matrix.h  Matrix.h.save-failed  SqMatrix.h
Mesh/: CMakeLists.txt  Cell.cpp  Cell.h  Face.h  Grid.cpp  Grid.h  Line.cpp  Line.h  Node.cpp  Node.h  Shape.h
Model/: Model.h
Nastran-TEMP/: CMakeLists.txt  Elementos.h  Modelo.h  Nastran.h  Nodo.h~  SistCoord.h
Output/: OutputFile.h
SistEcuac/: SistEcuac.h  SistEcuacDef.h
Solver/: CMakeLists.txt  PETSC_Solver.cpp  PETSC_Solver.h  PETSC_Solver.inst  Solver.h
Type/: CMakeLists.txt  CMakeLists.txt~  Mat3d.h  Operations.h  Scalar.cpp  Scalar.h  Vec3d.cpp  Vec3d.h  Vector.h  pTraits.h
Utils/: CMakeLists.txt
Variables/: Variable.h
docs/: How to compile EPSol-WITH_PETSC.docx
